deployments/cloud/k8s/applications/dagster/git-sync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dagster-workspace-git-sync
  namespace: dagster
  labels:
    app: dagster
    owner: tuan.tran
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dagster
      owner: tuan.tran
  template:
    metadata:
      labels:
        app: dagster
        owner: tuan.tran
    spec:
      containers:
        - name: workspace-git-sync
          image: registry.k8s.io/git-sync/git-sync:v4.0.0
          args:
            - --repo=https://github.com/tuantran0910/rainbow
            - --depth=1
            - --period=60s
            - --branch=main
            - --root=/git
          volumeMounts:
            - name: workspace-volume
              mountPath: /git
          securityContext:
            runAsNonRoot: true
            runAsUser: 65532
            runAsGroup: 65532
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
