deployments/cloud/k8s/applications/dagster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dagster-ingress
  namespace: dagster
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: dagster-ingress-ip
    networking.gke.io/managed-certificates: dagster-ssl-cert
    networking.gke.io/v1beta1.FrontendConfig: dagster-frontend-config
spec:
  rules:
    - host: dagster.tuantrann.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dagster-webserver
                port:
                  number: 3000
